save user and create jwt token

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 POSTGRES_USER=authapp_user
 POSTGRES_PASSWORD=authapp_password
 POSTGRES_DB=authapp_db
+DATABASE_URI=postgres://authapp_user:authapp_password@localhost:5432/authapp_db?sslmode=disable
