get profile by auth token

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 CLIENT_ID="<string>"
 CLIENT_SECRET="<string>"
+SECRET_KEY="<string>"
+DATABASE_URI=postgres://postgres:postgres@localhost:5432/test?sslmode=disable
